--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>GoBeav Recipes</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:100" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" charset="utf-8" defer></script>
   </head>
   <body>
+    <header>
+      <h1 class="site-title"><a href="#">GoBeav Recipes</a></h1>
+    </header>
+    <main>
 
+    </main>
   </body>
 </html>
