--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
   </head>
   <body>
+    <h2>Seach button</h2>
+
+    <p>Full width:</p>
+    <form class="example">
+      <!-- need to make (action="/action_page.php") -->
+      <input type="text" placeholder="Search.." name="search">
+      <!-- inside search box -->
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+
+    <p>Centered inside a form with max-width:</p>
+    <form class="example" style="margin:auto;max-width:300px">
+      <input type="text" placeholder="Search.." name="search2">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
 
   </body>
 </html>
