--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h2>Seach button</h2>
 
-    <p>Full width:</p>
+    <p>This area will search bar area</p>
     <form class="example">
       <!-- need to make (action="/action_page.php") -->
       <input type="text" placeholder="Search.." name="search">
