--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="index.js" charset="utf-8" defer></script>
+
     <header>
       <h1 class="site-title"><a href="#">GoBeav Recipes</a></h1>
     </header>
+
+
     <main>
   </head>
   <body>
     <h2>Seach button</h2>
 
     <p>This area will search bar area</p>
-    <form class="example">
+    <form class="Search-Food">
       <!-- need to make (action="/action_page.php") -->
       <input type="text" placeholder="Search.." name="search">
       <!-- inside search box -->
