--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title></title>
   </head>
   <body>
-    <h2>Seach button</h2>
+    <h2>Search button</h2>
 
     <p>Full width:</p>
     <form class="example">
