--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
       <!-- inside search box -->
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
-    
+
+    <aside class="filter-container">
+
+      <div class="filter-input-container">
+        <label for="filter-bookmark">Bookmark</label>
+        <div class="filter-input-element">
+        </div>
+      </div>
+
+      <div class="filter-input-container">
+        <label for="filter-recipes">Recipes</label>
+        <div class="filter-input-element">
+        </div>
+      </div>
+
+      <div class="filter-input-container">
+        <label for="filter-ingredients">Ingredients</label>
+        <div class="filter-input-element">
+        </div>
+      </div>
+
+    </aside>
+
     </main>
   </body>
 </html>
