--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <main class="content">
 
+      <!--Search Bar -->
       <form class="Search-Food">
         <!-- need to make (action="/action_page.php") -->
         <input type="text" placeholder="Search.." name="search">
@@ -25,6 +26,30 @@
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
 
+      <!--Filter Search Bar-->
+      <aside class="filter-container">
+
+        <div class="filter-input-container">
+          <label for="filter-bookmark">Bookmark</label>
+          <div class="filter-input-element">
+          </div>
+        </div>
+
+        <div class="filter-input-container">
+          <label for="filter-recipes">Recipes</label>
+          <div class="filter-input-element">
+          </div>
+        </div>
+
+        <div class="filter-input-container">
+          <label for="filter-ingredients">Ingredients</label>
+          <div class="filter-input-element">
+          </div>
+        </div>
+
+      </aside>
+
+      <!--Item Listing-->
       <section id="items">
 
         <div class="item">
@@ -39,28 +64,6 @@
         </div>
 
       </section>
-
-    <aside class="filter-container">
-
-      <div class="filter-input-container">
-        <label for="filter-bookmark">Bookmark</label>
-        <div class="filter-input-element">
-        </div>
-      </div>
-
-      <div class="filter-input-container">
-        <label for="filter-recipes">Recipes</label>
-        <div class="filter-input-element">
-        </div>
-      </div>
-
-      <div class="filter-input-container">
-        <label for="filter-ingredients">Ingredients</label>
-        <div class="filter-input-element">
-        </div>
-      </div>
-
-    </aside>
 
     </main>
   </body>
