--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <aside class="filter-container">
 
       <div class="filter-input-container">
-        <label for="filter-bookmark">Bookmark</label>
+        <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
         <div class="filter-input-element">
         </div>
       </div>
@@ -51,11 +51,13 @@
       <div class="filter-input-container">
         <label for="filter-recipes">Recipes</label>
         <div class="filter-input-element">
+          <input type="text" name="filter-text" id="filter-text-recipes" class="filter-input">
         </div>
       </div>
 
       <div class="filter-input-container">
         <label for="filter-ingredients">Ingredients</label>
+        <input type="text" name="filter-text" id="filter-text-ingredients" class="filter-input">
         <div class="filter-input-element">
         </div>
       </div>
