--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <!-- need to make (action="/action_page.php") -->
         <input type="text" placeholder="Search.." name="search">
         <!-- inside search box -->
-        <button type="submit"><i class="fa fa-search"></i></button>
+        <button type="submit"><i class="fa fa-align-justify"></i></button>
+        <!-- fa fa-(icon that on the button) -->
       </form>
 
       <!--Filter Search Bar-->
