--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>GoBeav Recipes</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:100" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Fredoka+One|Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +12,8 @@
     <script src="index.js" charset="utf-8" defer></script>
 
     <header>
-      <h1 class="site-title"><a href="#">GoBeav Recipes</a></h1>
+      <h1 class="site-title" id="title-goBeav"><a href="#">GoBeav</a></h1>
+      <h1 class="site-title" id="title-recipes"><a href="#"><br>Recipes</a></h1>
     </header>
   </head>
   <body>
