--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>GoBeav Recipes</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Fredoka+One|Kaushan+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alatsi|Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,7 +12,7 @@
 
     <header>
       <h1 class="site-title" id="title-goBeav"><a href="#">GoBeav</a></h1>
-      <h1 class="site-title" id="title-recipes"><a href="#"><br>Recipes</a></h1>
+      <h1 class="site-title" id="title-recipes"><a href="#"><br>RECIPES</a></h1>
     </header>
   </head>
   <body>
