--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
     <script src="index.js" charset="utf-8" defer></script>
 
-    <header>
-      <h1 class="site-title" id="title-goBeav"><a href="#">GoBeav</a></h1>
-      <h1 class="site-title" id="title-recipes"><a href="#"><br>RECIPES</a></h1>
-    </header>
   </head>
   <body>
+    <header>
+      <h1 class="site-title">
+        <a href="#" id="title-goBeav">GoBeav</a>
+        <a href="#" id="title-recipes">RECIPES</a>
+      </h1>
+    </header>
 
     <main class="content">
 
@@ -47,7 +49,6 @@
                   <span class="name">Lime Chicken Soft Tacos</span>
                 </div>
 
-                </div>
               </div>
             </div>
         <!-- dynamic search bar end here -->
@@ -56,7 +57,6 @@
         <div id="bookmark-list-modal" class="hidden">
           <div class="modal-dialog">
             <div class="modal-header">
-              <h3>Bookmark List</h3>
               <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
             </div>
             <div class="modal-body">
@@ -77,7 +77,7 @@
           </div>
 
         <div class="filter-input-container">
-          <label for="filter-categories">Categories</label>
+          <!-- <label for="filter-categories">Categories</label> -->
           <div class="filter-input-element">
             <select id="filter-categories" class="filter-input" name="filter-categories">
               <option selected value="">Any</option>
