FIxing the JS for searching
Dynamic search filter

--- a/index.html
+++ b/index.html
@@ -26,32 +26,33 @@
         <!-- need to make (action="/action_page.php") -->
         <!-- <input type="text" placeholder="Search.." name="search"> -->
         <!-- inside search box -->
+
+
+
+
+
         <!-- dynamic search bar in here -->
            <div class="searchbox">
               <div class="header">
-                <input onkeyup="filter()" type="text" id="value" placeholder="Type to Search">
+                <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Type to Search">
               </div>
+              <!-- <div class="container">
 
-              <div class="container">
+                      <div class="item">
+                        <span class="icon">A</span>
+                        <span class="name">Apple</span>
+                      </div>
+                  </div> -->
 
-                <div class="item">
-                  <span class="icon">S</span>
-                  <span class="name">Sirloin Steak with Mushrooms</span>
-                </div>
 
-                <div class="item">
-                  <span class="icon">B</span>
-                  <span class="name">Bi-bim-bap</span>
-                </div>
-
-                <div class="item">
-                  <span class="icon">L</span>
-                  <span class="name">Lime Chicken Soft Tacos</span>
-                </div>
-
-              </div>
+              <!-- need it fill with photo container? -->
             </div>
         <!-- dynamic search bar end here -->
+
+
+
+
+
         <!-- <button type="submit"><i class="fa fa-search"></i></button> -->
         <div id="modal-backdrop" class="hidden"></div>
         <div id="bookmark-list-modal" class="hidden">
@@ -66,6 +67,15 @@
         <button type="submit"><i class="fa fa-align-justify"></i></button>
         <!-- fa fa-(icon that on the button) -->
       </form>
+
+
+
+
+
+
+
+
+
 
       <!--Filter Search Bar-->
       <aside class="filter-container">
@@ -96,6 +106,15 @@
         </div>
 
       </aside>
+
+<!-- End of Filter Search Bar -->
+
+
+
+
+
+
+
 
       <!--Item Listing-->
       <section id="items">
@@ -135,7 +154,7 @@
 
       </section>
 
-
+<!-- End of Item Listing -->
 
     </main>
   </body>
