--- a/index.html
+++ b/index.html
@@ -157,5 +157,54 @@
 <!-- End of Item Listing -->
 
     </main>
+
+
+
+
+
+
+    <!-- Start of Button to Add Post of Recipe -->
+    <button type="button" id="add-recipe-button"><i class="fas fa-plus"></i></button>
+
+    <div id="modal-add-recipe-backdrop" class="hidden"></div>
+    <div id="add-recipe-modal" class="hidden">
+      <div class="modal-add-recipe-dialog">
+
+        <div class="modal-add-recipe-header">
+          <h3>Add a recipe</h3>
+          <button type="button" id="modal-add-recipe-close" class="modal-hide-button">&times;</button>
+        </div>
+
+        <div class="modal-add-recipe-body">
+
+          <div class="recipe-input-element">
+            <label for="recipe-name-input">Recipe Name</label>
+            <input type="text" id="recipe-name-input"></input>
+          </div>
+
+          <div class="recipe-input-element">
+            <label for="recipe-photo-input">Photo (URL)</label>
+            <input type="text" id="recipe-photo-input">
+          </div>
+
+          <div class="recipe-input-element">
+            <label for="recipe-categories-input">Categories</label>
+            <input type="text" id="recipe-categories-input">
+          </div>
+
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
+          <button type="button" id="modal-add" class="action-button">Add</button>
+        </div>
+
+      </div>
+    </div>
+    <!-- End of Button to Add Post of Recipe -->
+
+
+
+
   </body>
 </html>
