Image Darken when hover

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <a href="#"><img src="https://lh3.googleusercontent.com/proxy/WGmd0nX27AApPEXhO7IAoM35HXDeyrjoG6F8FCvEQ0FHx_wL0kpofvxBlRvtFs6UztSy_0yResigcdiCIR9H2FvbV_AUvKZWR6FIkNxWHnSWOWLZBHez-ZoX0lcCXDut0F0B8y7iF8m3IXhRpJewe8pZbX4Wh3TM5iWtOHxXxus-xXrFcg=s0-d" alt="Sirloin Steak with Mushrooms"></a>
             </div>
             <div class="item-info-container">
-              <span class="item-title" class="hidden">Sirloin Steak with Mushrooms</span>
+              <span class="item-title">Sirloin Steak with Mushrooms</span>
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
               <a href="#"><img src="https://images.media-allrecipes.com/userphotos/600x600/6556979.jpg" alt="Shrimp Pasta"></a>
             </div>
             <div class="item-info-container">
-              <span class="item-title" class="hidden">Shrimp Pasta</span>
+              <span class="item-title">Shrimp Pasta</span>
             </div>
           </div>
         </div>
