--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@
 
           <div class="recipe-input-element">
             <label for="recipe-name-input">Recipe Name</label>
-            <input type="text" id="recipe-name-input"></input>
+            <input type="text" id="recipe-name-input" placeholder="Recipe Name"></input>
           </div>
 
           <div class="recipe-input-element">
             <label for="recipe-photo-input">Photo (URL)</label>
-            <input type="text" id="recipe-photo-input">
+            <input type="text" id="recipe-photo-input" placeholder="Drag Images or URLs here">
           </div>
 
           <div class="recipe-input-element">
             <label for="recipe-categories-input">Categories</label>
-            <input type="text" id="recipe-categories-input">
+            <input type="text" id="recipe-categories-input" placeholder="Categories  ex)Asian, American, Italian, etc.">
           </div>
 
         </div>
