--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <!-- dynamic search bar in here -->
            <div class="searchbox">
               <div class="header">
-                <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Type to Search">
+                <input onkeyup="searchbox_filter()" type="text" id="value" placeholder="Find a recipe..">
+                <button type="submit" id="filter-button"><i class="fa fa-align-justify"></i></button>
               </div>
               <!-- <div class="container">
 
@@ -49,23 +50,6 @@
             </div>
         <!-- dynamic search bar end here -->
 
-
-
-
-
-        <!-- <button type="submit"><i class="fa fa-search"></i></button> -->
-        <div id="modal-backdrop" class="hidden"></div>
-        <div id="bookmark-list-modal" class="hidden">
-          <div class="modal-dialog">
-            <div class="modal-header">
-              <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
-            </div>
-            <div class="modal-body">
-              </div>
-            </div>
-          </div>
-        <button type="submit"><i class="fa fa-align-justify"></i></button>
-        <!-- fa fa-(icon that on the button) -->
       </form>
 
 
@@ -79,15 +63,10 @@
 
       <!--Filter Search Bar-->
       <aside class="filter-container">
-
         <div class="filter-input-container">
-          <!-- Star shape button for bookmark -->
-          <button type="button" id="bookmark-button"><i class="far fa-star"></i></button>
-
-          </div>
-
+          <button type="button" id="bookmark-button"><i class="fas fa-star"></i></button>
+        </div>
         <div class="filter-input-container">
-          <!-- <label for="filter-categories">Categories</label> -->
           <div class="filter-input-element">
             <select id="filter-categories" class="filter-input" name="filter-categories">
               <option selected value="">Any</option>
@@ -98,13 +77,11 @@
             </select>
           </div>
         </div>
-
         <div class="filter-input-container">
-          <input type="text" name="filter-text" id="filter-text-ingredients" class="filter-input" placeholder="Ingredients">
           <div class="filter-input-element">
+            <input type="text" name="filter-text" id="filter-text-ingredients" class="filter-input" placeholder="Ingredients">
           </div>
         </div>
-
       </aside>
 
 <!-- End of Filter Search Bar -->
