Added Hidden buttons

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             <div class="item-info-container">
               <span class="item-title">Bi-bim-bap</span>
             </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
+            </div>
           </div>
         </div>
 
@@ -114,6 +118,10 @@
             </div>
             <div class="item-info-container">
               <span class="item-title">Lime Chicken Soft Tacos</span>
+            </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
             </div>
           </div>
         </div>
@@ -126,6 +134,10 @@
             <div class="item-info-container">
               <span class="item-title">Sirloin Steak with Mushrooms</span>
             </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
+            </div>
           </div>
         </div>
 
@@ -136,6 +148,10 @@
             </div>
             <div class="item-info-container">
               <span class="item-title">Shrimp Pasta</span>
+            </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
             </div>
           </div>
         </div>
