changed style from "inline-block" to "block"

--- a/index.html
+++ b/index.html
@@ -156,7 +156,35 @@
           </div>
         </div>
 
-        
+        <div class="item" data-bookmark="false" data-categories="Shrimpian" data-ingredients="Shrimp">
+          <div class="item-contents">
+            <div class="item-image-container">
+              <a href="#"><img src="https://img1.coastalliving.timeinc.net/sites/default/files/image/2009/08/shrimp-salad-cl-1611640-x.jpg" alt="Margarita Shrimp Salad"></a>
+            </div>
+            <div class="item-info-container">
+              <span class="item-title">Margarita Shrimp Salad</span>
+            </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="item" data-bookmark="false" data-categories="Seafood" data-ingredients="Salmon">
+          <div class="item-contents">
+            <div class="item-image-container">
+              <a href="#"><img src="https://vignette.wikia.nocookie.net/recipes/images/7/7c/Maplesalmon.jpg/revision/latest?cb=20131218002632" alt="Maple Salmon"></a>
+            </div>
+            <div class="item-info-container">
+              <span class="item-title">Maple Salmon</span>
+            </div>
+            <div class="item-button-container">
+              <button type="button" class="far fa-star"></button>
+              <button type="button" class="fas fa-trash"></button>
+            </div>
+          </div>
+        </div>
 
       </section>
 
