--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="index.js" charset="utf-8" defer></script>
+    <script src="/itemTemplate.js" charset="utf-8" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.runtime.js"></script>
+    <script src="/index.js" charset="utf-8" defer></script>
 
   </head>
   <body>
